# 2022-polytech-nosenkov

./: LICENSE  README.md
02_compiler/: CMakeLists.txt  Makefile  Makefile.win  README.md  func.cpp  hello.cpp  hello.s  hello2.dev  hello2.layout
03_cpp/calculator/: CMakeLists.txt  calc.cpp
03_cpp/gcd/: CMakeLists.txt  gcd.cpp
03_cpp/intro/: CMakeLists.txt  intro.cpp
04_search/intro/: intro_search.cpp
04_search_sort/array_insertion/: CMakeLists.txt  insert.cpp  insert_sorted(28).cpp  insert_sorted.cpp  search_position.cpp
04_search_sort/binary/: CMakeLists.txt  binary.cpp  binary2.cpp
04_search_sort/intro/: CMakeLists.txt  README.md
04_search_sort/intro_sort/: CMakeLists.txt  intro_sort.cpp
04_search_sort/linear/: CMakeLists.txt  line.cpp
04_search_sort/mul/: mul.cpp
04_search_sort/sort_cmp/: CMakeLists.txt  sort_cmp.cpp
05_computer_architecture/: README.md
05_computer_architecture/cpuinfo/: CMakeLists.txt  cpuinfo in forever cycle.cpp  cpuinfo to all core.cpp  cpuinfo.cpp
05_computer_architecture/meminfo/: CMakeLists.txt  mem.cpp
06_pointers_references/intro/: CMakeLists.txt  str.cpp
06_pointers_references/matmul/: CMakeLists.txt  matmul.cpp
06_pointers_references/mul/: CMakeLists.txt  mul.cpp
06_pointers_references/palindrome/: CMakeLists.txt  palindrome.cpp
08_oop/Student/: Student.cpp  Student.h  StudentList.cpp  StudentList.h  main.cpp
08_oop/complex/: CmakeLists.txt  Complex (1).h  Complex.cpp  main.cpp
08_oop/intro/: CMakeLists.txt  String (2).cpp  String.h  main.cpp
10_list/intro/: CMakeLists.txt  linked_list.h  (+1 more)
(+12 files in other folders)
